src/main/java/com/example/demo/Error/CollectionEmptyException.java
package com.example.demo.Error;

public class CollectionEmptyException extends RuntimeException {

    public CollectionEmptyException(String message) {

        super(message);
    }
}
